# Python

./: .env  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  requirements.txt
breakout_game/: BUILD  BUILD.bazel  breakout_game.py
cookie_clicker/: BUILD  BUILD.bazel  cookie_clicker.py
hello_world/: hello_world.py
pg_test/: hello_pg.py
tank_battle/: game.py  hand_controllers.py  tank_battle.py  throwing_path.py
tank_battle/__to_copy__/: main.py  tank_battle.py
tank_battle/base/: __init__.py  menu.py  tank.py  utils.py
tank_battle/control/: hand_controllers.py
tank_battle/modules/base/: button.py  options.py  translations.py  utils.py
tank_battle/modules/control/: control.py  controller.py  hand_controllers.py
tank_battle/modules/menu/: base_menu.py  language_menu.py  main_menu.py  options_menu.py
tank_battle/modules/objects/: background.py  base_object.py  grenade.py  object.py  tank.py
tank_battle/modules/physics/: throwing_path.py
tank_battle/modules/physics/test/: throwing_path_test.py
tank_battle/test/: throwing_path_test.py
tank_battle/tests/: controller_test.py  throwing_path_test.py
